--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>O que é a traíde da web ?</title>
     <link rel="stylesheet" href="./CSS/syle.css">
     <link rel="stylesheet" href="./MEDIA/media.css">
+    <link rel="shortcut icon" href="ico.ico" type="image/x-icon">
 </head>
 <body>
     <main id="conteudo">
